@@ -1,11 +1,13 @@
 --- #YAML:1.0
 name:               LEOCHARRE-Class2
-version:            1.18
+version:            1.19
 abstract:           ~
 author:  []
 license:            perl
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Carp:             1
@@ -13,11 +15,12 @@ requires:
     Exporter:         5
     Smart::Comments:  1
     Test::Simple:     0
+    YAML:             0.66
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
